--- a/index.html
+++ b/index.html
@@ -7,10 +7,75 @@
     <title>12bool</title>
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="stylesheet" href="css/property.css">
+
 
 
 </head>
 <body>
+
+    <h1>
+        Esercizio Casa 
+    </h1>
+
+    <div class="row">
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1"> col-1</div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+        <div class="col-1">
+            <p>col-1</p> 
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-2">
+            <p>col</p>
+        </div>
+
+        <div class="col">
+            <p>col</p>
+        </div>
+        <div class="col">
+            <p>col</p>
+        </div>
+
+
+    </div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+
+
     
 </body>
 </html>
