--- a/index.html
+++ b/index.html
@@ -69,10 +69,69 @@
 
 
     </div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
+    <div class="row">
+        <div class="col-12">
+            <p>col-12</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-8">
+           <p>col-8</p>
+        </div>
+
+        <div class="col-2">
+            <p>col-2</p>
+        </div>
+        <div class="col-2">
+            <p>col-2</p>
+        </div>
+
+
+    </div>
+    <div class="row">
+        <div class="col-1">
+            <p>col 1</p>
+        </div>
+
+        <div class="col-2">
+            <p>col 2</p>
+        </div>
+        <div class="col-2">
+            <p>
+                col 2
+            </p>
+        </div>
+
+        <div class="col-6">
+            <p>col 6</p>
+        </div>
+
+        <div class="col-1">
+            <p>col 1</p>
+        </div>
+    </div>
+    <div class="row">
+
+        <div class="col-6 flex wrap">
+            <div class="col-2 bg-green">
+                <p>nested 2 col</p>
+            </div>
+            <div class="col-2 bg-green">
+                <p>nested 2 col</p>
+            </div>
+            <div class="col-8 bg-green">
+                <p>nested 8 col</p>
+            </div>
+        </div>
+        <div class="col-6 flex wrap">
+            <div class="col-6 bg-green">
+                <p>nested col 6</p>
+            </div>
+            <div class="col-6 bg-green">
+                <p>neasted col 6</p>
+            </div>
+        </div>
+    </div>
     <div class="row"></div>
 
 
