added another 7 rows

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
     <div class="row">
 
-        <div class="col-6 flex wrap">
+        <div class="col-6 flex wrap bottom">
             <div class="col-2 bg-green">
                 <p>nested 2 col</p>
             </div>
@@ -123,7 +123,7 @@
                 <p>nested 8 col</p>
             </div>
         </div>
-        <div class="col-6 flex wrap">
+        <div class="col-6 flex wrap bottom">
             <div class="col-6 bg-green">
                 <p>nested col 6</p>
             </div>
@@ -132,7 +132,34 @@
             </div>
         </div>
     </div>
-    <div class="row"></div>
+    <div class="row">
+        <div class="col-12"></div>
+    </div>
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-11"></div>
+    </div>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-10"></div>
+    </div>
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-9"></div>
+    </div>
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-8"></div>
+    </div>
+    <div class="row">
+        <div class="col-5"></div>
+        <div class="col-7"></div>
+    </div>
+    <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6"></div>
+       
+    </div>
 
 
     
