nested col row fixed

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
     <div class="row">
 
-        <div class="col-6 flex wrap bottom">
+        <div class="col-6 row bottom">
             <div class="col-2 bg-green">
                 <p>nested 2 col</p>
             </div>
@@ -123,7 +123,7 @@
                 <p>nested 8 col</p>
             </div>
         </div>
-        <div class="col-6 flex wrap bottom">
+        <div class="col-6 row bottom">
             <div class="col-6 bg-green">
                 <p>nested col 6</p>
             </div>
@@ -161,6 +161,24 @@
        
     </div>
 
+    <h1>
+        Offset
+    </h1>
+
+
+    <div class="row">
+        <div class="col-1 offset-col-10"></div>
+    </div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
 
     
 </body>
