--- a/index.html
+++ b/index.html
@@ -167,18 +167,40 @@
 
 
     <div class="row">
-        <div class="col-1 offset-col-10"></div>
+        <div class="col-1 offset-col-11"></div>
     </div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
+    <div class="row">
+        <div class="col-2 offset-col-10"></div>
+    </div>
+    <div class="row">
+        <div class="col-3 offset-col-9">
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 offset-col-8"></div>
+    </div>
+    <div class="row">
+        <div class="col-5 offset-col-7"></div>
+    </div>
+    <div class="row">
+        <div class="col-6 offset-col-6"></div>
+    </div>
+    <div class="row">
+        <div class="col-7 offset-col-5"></div>
+    </div>
+    <div class="row">
+        <div class="col-8 offset-col-4"></div>
+    </div>
+    <div class="row">
+        <div class="col-9 offset-col-3"></div>
+    </div>
+    <div class="row">
+        <div class="col-10 offset-col-2"></div>
+    </div>
+    <div class="row">
+        <div class="col-11 offset-col-1"></div>
+    </div>
 
     
 </body>
