--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <div class="col-1">
             <p>col-1</p> 
         </div>
-        <div class="col-1"> col-1</div>
+        <div class="col-1"> 
+           <p>col-1</p> 
+        </div>
         <div class="col-1">
             <p>col-1</p> 
         </div>
