--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
         <div class="col-7"></div>
     </div>
     <div class="row">
-        <div class="col-6"></div>
-        <div class="col-6"></div>
+        <div class="col-6 bottom"></div>
+        <div class="col-6 bottom"></div>
        
     </div>
 
